--- a/purchasely-huawei/example/android/app/build.gradle
+++ b/purchasely-huawei/example/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: 'com.huawei.agconnect'
 
 import com.android.build.OutputFile
 
@@ -210,7 +211,7 @@ dependencies {
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
 task copyDownloadableDepsToLibs(type: Copy) {
-    from configurations.compile
+    from configurations.implementation
     into 'libs'
 }
 
