--- a/purchasely-huawei/example/android/build.gradle
+++ b/purchasely-huawei/example/android/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext {
-        minSdkVersion = 16
+        minSdkVersion = 21
         compileSdkVersion = 29
         targetSdkVersion = 29
     }
@@ -10,9 +10,11 @@ buildscript {
         google()
         mavenCentral()
         jcenter()
+        maven { url 'https://developer.huawei.com/repo/' }
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.5.3")
+        classpath("com.android.tools.build:gradle:7.0.4")
+        classpath 'com.huawei.agconnect:agcp:1.6.0.300'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -35,5 +37,6 @@ allprojects {
         mavenCentral()
         jcenter()
         maven { url 'https://www.jitpack.io' }
+        maven { url 'https://developer.huawei.com/repo/' }
     }
 }
